--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
     <meta charset="UTF-8">
     <title>THE J!</title>
-//    <link href="style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
   </head>
 <style>
 .GeneratedMarquee {
@@ -17,10 +17,9 @@ padding:0em;
 </style>
 
 <body bgcolor="#000000" background="img/bg_stars.gif" text="#e54ed0" link="#ff4c4c" vlink="#ff4c4c" alink="#ff4c4c">
-
+<marquee class="GeneratedMarquee" direction="left" scrollamount="11" behavior="scroll">this is our new site! kinda proud of it haha - bouz</marquee>
   <body>
   <center>
-<marquee class="GeneratedMarquee" direction="left" scrollamount="11" behavior="scroll">this is our new site! kinda proud of it haha - bouz</marquee>
   <br>
 <a href="https://bouzsz.github.io"><img src="img/bouz.png" alt="Bouz" style="width:42px;height:42px;"></a>
 <a href="https://www.youtube.com/channel/UCoMeBpGkRe-D7tI_tfdj0lQ"><img src="img/jaha.jpg" alt="Jahamenas" style="width:42px;height:42px;"></a>
