--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ padding:0em;
 </audio>
   <br>
   <br>
-   <a href="https://discord.gg/hCmzjbVg66">discord</a> <a href="sports.html">sports</a> 
+   <a href="https://discord.gg/hCmzjbVg66">discord</a> <a href="sports.html">sports</a> <span style="color: #ffff00;"><a style="color: #ffff00;" href="construction.html">games</a></span>
 
   <br>
     <h1>welcome</h1> 
