--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@ padding:0em;
 <a href="https://www.youtube.com/channel/UCoMeBpGkRe-D7tI_tfdj0lQ"><img src="img/jaha.jpg" alt="Jahamenas" style="width:42px;height:42px;"></a>
 <a href="https://www.youtube.com/channel/UCu2Blcm05Yt-P_XsLRcIQ4Q"><img src="img/jaka.jpg" alt="Jahamenas" style="width:42px;height:42px;"></a>
   <br>
+<a href="https://github.io"><img src="img/github.gif" alt="Powered with Github Pages"</a> 
+<a href="https://newgrounds.com"><img src="img/ngbanner2.gif" alt="Join Newgrounds!"</a> 
+<a href="https://discord.gg/hCmzjbVg66"><img src="img/discord.gif" alt="Join our Discord!"</a>
+<a href=""><img src="img/noteoth2.gif" alt="Notepad"</a>
+<a href=""><img src="img/miku.gif" alt="idk this banner looked funny"</a>
   <br>
 <audio controls autoplay loop>
   <source src="aud/hockey.mp3" type="audio/mpeg">
@@ -32,7 +37,7 @@ padding:0em;
 </audio>
   <br>
   <br>
-   <a href="https://discord.gg/hCmzjbVg66">discord</a> <a href="sports.html">sports</a> <span style="color: #ffff00;"><a style="color: #ffff00;" href="construction.html">games</a></span>
+<a href="sports.html">sports</a> <span style="color: #ffff00;"><a style="color: #ffff00;" href="construction.html">games</a></span>
 
   <br>
     <h1>welcome</h1> 
