--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ padding:0em;
 <a href="https://www.youtube.com/channel/UCoMeBpGkRe-D7tI_tfdj0lQ"><img src="img/jaha.jpg" alt="Jahamenas" style="width:42px;height:42px;"></a>
 <a href="https://www.youtube.com/channel/UCu2Blcm05Yt-P_XsLRcIQ4Q"><img src="img/jaka.jpg" alt="Jahamenas" style="width:42px;height:42px;"></a>
   <br>
-<a href="https://github.io"><img src="img/github.gif" alt="Powered with Github Pages"</a> 
+<a href="mailto:bouz@thej.space"><img src="img/email-icon.gif" alt="eMail!"</a> 
 <a href="https://newgrounds.com"><img src="img/ngbanner2.gif" alt="Join Newgrounds!"</a> 
 <a href="https://discord.gg/hCmzjbVg66"><img src="img/discord.gif" alt="Join our Discord!"</a>
 <a href=""><img src="img/noteoth2.gif" alt="Notepad"</a>
