--- a/construction.html
+++ b/construction.html
@@ -1,3 +1,8 @@
+<head>
+    <meta charset="UTF-8">
+    <title>Under Construction!</title>
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
+  </head>
 <body bgcolor="#000000" background="img/hazard.jpg" text="#7E5109" link="#ff4c4c" vlink="#ff4c4c" alink="#ff4c4c">
 <center>
 <img src="img/construction.gif" alt="Under Construction!">
