--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ padding:0em;
 </audio>
   <br>
   <br>
-<a href="sports.html">sports</a> <span style="color: #ffff00;"><a style="color: #ffff00;" href="construction.html">games</a></span>
+<a href="sports.html">sports</a> <span style="color: #ffff00;">
 
   <br>
     <h1>welcome</h1> 
