--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <body style="background-color:black;">
 </body>
       <a href="main.html">
-         <img alt="1000 Bees" src="img/the.png"
-         width=150" height="150">
+         <img alt="1000 Bees" class="center" src="img/the.png"
+         width=250" height="250">
       </a>
