--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <body style="background-color:black;">
 </body>
-      <a href="main.html">
-         <img alt="1000 Bees" class="center" src="img/the.png"
-         width=250" height="250">
-      </a>
+
+<a href="main.html"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://thej.space/img/the.png" alt="1000 Bees" width="200" height="200" /></a>
